--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,15 +13,38 @@
         <th colspan="3"></th>
       </thead>
 
-      <% @books.each do |f| %>
+      <% @books.each do |book| %>
       <tr>
-        <td><%= link_to attachment_image_tag(f.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg"), user_path(f.user.id) %></td>
-        <td><%= link_to f.title, book_path(f.id) %></td>
-        <td><%= f.body %></td>
-        
-      <% end %>
-      </tr>
-    </table>
+        <td><%= link_to attachment_image_tag(book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg"), user_path(book.user.id) %></td>
+            <%#= link_to attachment_image_tag(book.user, :profile_image, format: "jpeg", fallback: "no_image.jpg", size: "40x40"), user_path(book.user_id) %>
+        <td><%= link_to book.title, book_path(book.id) %></td>
+
+        <td><%= book.body %></td>
+
+        <!--startいいね機能-->
+        <% if book.favorited_by?(current_user) %>
+                <td>
+                  <%= link_to book_favorites_path(book), method: :delete do %>
+                    <i class="fa fa-heart fa-xs" aria-hidden="true"  style="color: red;">
+                      <%= book.favorites.count %>
+                    </i>
+                  <% end %>
+                </td>
+              <% else %>
+                <td>
+                  <%= link_to book_favorites_path(book), method: :post do %>
+                    <i class="fa fa-heart fa-xs" aria-hidden="true">
+                      <%= book.favorites.count %>
+                    </i>
+                  <% end %>
+                </td>
+              <% end %>
+              <td>
+                コメント数:<%= book.book_comments.count %>
+              </td>
+            </tr>
+          </tbody>
+          <% end %>
+        </table>
     </div>
   </div>
-</div>
